--- a/melhores_experiencias.html
+++ b/melhores_experiencias.html
@@ -408,7 +408,7 @@ body {
     <button class="botao-guardar" style="margin-left: 0.5rem;">Pesquisar</button>
   </div>
 
-  <h3 style="color: var(--cor-terciaria); margin-bottom: 1rem;">Principais Atrações</h3>
+  <h3 style="color: var(--cor-terciaria); margin-bottom: 1rem;">Melhores Experiências</h3>
 
   <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 1.5rem; margin-bottom: 2rem;">
 
@@ -663,24 +663,34 @@ body {
 
 </main>
 <script>
-  function adicionarCarrinho(atividade) {
-    let carrinho = JSON.parse(localStorage.getItem("carrinho")) || [];
-    carrinho.push(atividade);
-    localStorage.setItem("carrinho", JSON.stringify(carrinho));
-    alert(atividade + " foi adicionada ao carrinho.");
+ function adicionarCarrinho(nome) {
+  const carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+
+  if (carrinho.includes(nome)) {
+    alert(`${nome} já está no carrinho.`);
+    return;
   }
 
-  function adicionarFavoritos(atividade) {
-    let favoritos = JSON.parse(localStorage.getItem("favoritos")) || [];
-    if (!favoritos.includes(atividade)) {
-      favoritos.push(atividade);
-      localStorage.setItem("favoritos", JSON.stringify(favoritos));
-      alert(atividade + " foi adicionada aos favoritos.");
-    } else {
-      alert("Esta atividade já está nos favoritos.");
-    }
+  carrinho.push(nome);
+  localStorage.setItem('carrinho', JSON.stringify(carrinho));
+  alert(`${nome} foi adicionado ao carrinho.`);
+}
+
+ function adicionarFavoritos(nome) {
+  const favoritos = JSON.parse(localStorage.getItem('favoritos')) || [];
+
+  if (favoritos.includes(nome)) {
+    alert(`${nome} já está nos favoritos.`);
+    return;
   }
+
+  favoritos.push(nome);
+  localStorage.setItem('favoritos', JSON.stringify(favoritos));
+  alert(`${nome} foi adicionado aos favoritos.`);
+}
+
 </script>
+
 
 
 
