--- a/dados.html
+++ b/dados.html
@@ -338,7 +338,7 @@ body {
         <li>
           <a href="#">Carrinho <span class="arrow">º</span></a>
           <ul>
-            <li><a href="lista_artigos.html">Lista de Artigos</a></li>
+            <li><a href="carrinho.html">Lista de Artigos</a></li>
             <li><a href="finalizar_roteiro.html">Finalizar Roteiro</a></li>
           </ul>
         </li>
@@ -346,7 +346,7 @@ body {
         <li>
           <a href="#">Favoritos <span class="arrow">º</span></a>
           <ul>
-            <li><a href="lista_artigos.html">Lista de Artigos</a></li>
+            <li><a href="lista_favoritos.html">Lista de Artigos</a></li>
             <li><a href="pesquisar_atividades.html">Pesquisar Atividades</a></li>
           </ul>
         </li>
