--- a/porto_santo.htm
+++ b/porto_santo.htm
@@ -364,7 +364,7 @@ body {
         <li>
           <a href="#">Carrinho <span class="arrow">º</span></a>
           <ul>
-            <li><a href="lista_artigos.html">Lista de Artigos</a></li>
+            <li><a href="carrinho.html">Lista de Artigos</a></li>
             <li><a href="finalizar_roteiro.html">Finalizar Roteiro</a></li>
           </ul>
         </li>
@@ -372,7 +372,7 @@ body {
         <li>
           <a href="#">Favoritos <span class="arrow">º</span></a>
           <ul>
-            <li><a href="lista_artigos.html">Lista de Artigos</a></li>
+            <li><a href="carrinho.html">Lista de Artigos</a></li>
             <li><a href="pesquisar_atividades.html">Pesquisar Atividades</a></li>
           </ul>
         </li>
